# navid_kamal_internship_assignment

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INDEX.md  MIGRATION.md  PROJECT_STRUCTURE.md  PROJECT_TREE.txt  README.md  REORGANIZATION_SUMMARY.md  baseline_eval.py  check_gpu.py  check_splits.py  diagnose.py  docker-compose.yml  final_try_results.json  pyproject.toml  rebuild_splits.py  requirements.txt  setup.bat  setup.py  setup.sh  shelf.py  train.py
.dvc/: config
.github/workflows/: docker-publish.yml
config/: airflow.cfg  runtime.yaml  runtime.yaml.example
dags/: pipeline.py
dataset/: .gitignore  dataset.dvc
docs/: README.md
fastapi-prometheus-grafana-master/: .gitignore  README.md  REFACTORING.md  docker-compose.yaml
fastapi-prometheus-grafana-master/app/: Dockerfile  __init__.py  config.py  database.py  db_service.py  detection.py  main.py  metrics.py  requirements.txt  schemas.py  test_main.py  utils.py
fastapi-prometheus-grafana-master/grafana/provisioning/dashboards/: fastapi-dashboard.json
fastapi-prometheus-grafana-master/streamlit/: Dockerfile  app.py
runs/detect/runs/train/final_try_baseline_fixed_5/: args.yaml  results.csv
runs/train/pipeline_run/: args.yaml  results.csv
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  check_splits.py  diagnose.py  rebuild_splits.py
src/model/: __init__.py  benchmark.py  eval.py  export_onnx.py  train.py
src/pipeline/: __init__.py
src/pipeline/dags/: __init__.py  pipeline.py
src/utils/: __init__.py  gpu.py  shelf.py
tests/: test_pipeline.py
